Wrapping problem with long strings in Bugster

--- a/mkdocs_bs5/assets/scss/style.scss
+++ b/mkdocs_bs5/assets/scss/style.scss
@@ -764,6 +764,7 @@ table .table-light th {
 
 		p {
 			margin-bottom: 0;
+			overflow-wrap: anywhere;
 		}
 	}
 
